# pymavlink-test

./: .gitignore  Dockerfile  LICENSE  LICENSE.txt  README.md  config.sh  connection.py  constants.py  docker-compose.yaml  listen.py  main.py  pyproject.toml  requirements.txt  setup.py  sim.ps1  sim.sh  start.sh  stop.sh
LENS-10mm/: compose.yaml  start.sh
LENS-10mm-2/: Dockerfile  compose.yaml  start.sh
LENS-10mm-2/models/Drone-LENS-10mm-2/: model.sdf
LENS-10mm-2/scripts/: requirements.txt  setup.sh  start.sh  test1.py  test2.py
LENS-10mm-2/worlds/: iris_arducopter_runway.world
LENS-10mm/models/Drone-LENS-10mm/: model.sdf
LENS-10mm/scripts/: start.sh  test.py
LENS-10mm/worlds/: iris_arducopter_runway.world
containerization/: Dockerfile  build-instructions.sh  create-container.ps1  docker-compose.yaml
scripts/: fix-dronekit.sh  sim-run.sh  sim-start.sh
src/: connection.py  constants.py  launcher.sh  main.py  main_cv.py  simulate.py
src/scripts/: sim-run.sh  sim-start.sh  sim.ps1
templates/ardupilot-examples/worlds/: .iris.wbproj  iris.wbt  iris_camera_down.wbt
templates/docker/: Dockerfile  docker-compose.yaml
