[build-system]
    requires=["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pymavlink_docker"
version = "0.0.1"
dependencies = [
    "numpy",
    "pymavlink",
    "loguru",
]
requires-python = ">=3.10"
authors = [
    {name = "Kyle Moy", email = "moy.ky@northeastern.edu"},
]
description = "Simple Docker for Webots-Ardupilots SITL."
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["drone", "simulation", "docker", "ardupilot", "webots", "SITL", "mavlink", "pymavlink"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Windows",
]

[project.urls]
Homepage = "https://github.com/nifvimp/pymavlink-test"
Repository = "https://github.com/nifvimp/pymavlink-test"
Issues = "https://github.com/nifvimps/pymavlink-test/issues"

